--- a/docker/.env
+++ b/docker/.env
@@ -1,8 +1,8 @@
 NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=443
 
-POSTGRES_VERSION=13
-POSTGRES_DB=hub
+POSTGRES_VERSION=14
+POSTGRES_DB=ts
 POSTGRES_PASSWORD=admin
 POSTGRES_USER=admin
 POSTGRES_PORT=5432
