add simulation command

--- a/code/.env
+++ b/code/.env
@@ -34,3 +34,9 @@ DATABASE_URL="postgresql://admin:admin@ts-postgres:5432/ts?serverVersion=14&char
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> redis ###
+REDIS_HOST=ts-redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis
+###< redis ###
