--- a/code/composer.json
+++ b/code/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "dunglas/doctrine-json-odm": "^1.2",
+        "predis/predis": "^1.1",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^1.3.1",
